# candlefinder

./: .gitignore  README.md
Pathfinding/Breadth_First/: Breadth_First.pde
controllerBoard/: controllerBoard.ino
controllerBoard/controllerBoard/: controllerBoard.ino
opposite direction/: controller.sch  pdp.brd  pdp.sch
src/: uvc-radiometry.py
src/cakeduino/: cakeduino.ino
src/candlefinder/: CMakeLists.txt  package.xml
src/candlefinder/cakeduino/: cakeduino.ino
src/candlefinder/launch/: candlefinder.launch  starthector.launch
src/candlefinder/src/: FLIR_node.py  camera_scan_map.cpp  camera_scan_map.h  control.cpp  cost_map.cpp  heat_map.cpp  heat_map.h  navigation.cpp  navigation.h  opencv_node.cpp  robot_outline.cpp  robot_teleop.cpp  serial_node.cpp  setExposure.sh  spinduino_test.cpp
src/driveduino/: driveduino.ino
src/fftduino/: fftduino.ino
src/rostutorial/: CMakeLists.txt  package.xml
src/rostutorial/src/: hello.cpp  pubvel.cpp  readpose.cpp
src/spinduino/: spinduino.ino
