<?xml version="1.0"?>
<package>
  <name>candlefinder</name>
  <version>0.0.1</version>
  <description>The candlefinder package</description>

  <maintainer email="gisellegk@gmail.com">Giselle Koo</maintainer>
  <maintainer email="ericsimsm@gmail.com">Eric Sims</maintainer>

  <license>MIT</license>

  <url type="website">gisellegk.github.io/candlefinder</url> 
  <url type="repository">https://github.com/gisellegk/candlefinder</url> 

  <author email="gisellegk@gmail.com">Giselle Koo</author> -->
  <author email="ericsimsm@gmail.com">Eric Sims</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
